--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port:8086
 spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
