--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ twilio:
 sendgrid.key=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
 
 #para swagger
-#springdoc.api-docs.path=/languageconquers-docs
+#.api-docs.path=/languageconquers-docs
 #link para ui
 #https://languageconquers.herokuapp.com/swagger-ui.html
 
