--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
 			<artifactId>google-auth-library-oauth2-http</artifactId>
 			<version>0.21.1</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
